TEST_PROGRAMS/INVALID/Haitong_Yang/semiAfterEndif.min
#incorrect program with parsing error: semi colon after endif

var x : int;

x=0;

if(x) then 
	x = x+6; 
endif;

